<resources>
    <string name="test">u</string>

    <string name="app_name">ProyectoTuFlix</string>
    <string name="inicia_sesion">Inicia sesión con tu correo electrónico</string>
    <string name="escribe_tu_contrasenya">Escribe la contraseña</string>
    <string name="iniciarSesionAutomaticamente">Inicia sesión automaticamente</string>
    <string name="recuperarContrasenya">He olvidado la contraseña</string>
    <string name="iniciarSessio">INICIAR SESIÓN</string>
    <string name="contrasenya">Contraseña</string>
    <string name="correo">Correo electrónico</string>
    <string name="google">Continuar con una cuenta de Google</string>
    <string name="registro">¿Primera vex en TuFlix? REGISTRO</string>
    <string name="problemas">¿Tienes problemas para entrar?</string>
    <string name="correoNuevo">Escribe tu correo electrónico</string>
    <string name="contraNueva">Escribe tu contraseña nueva</string>
    <string name="creanombreusuario">Crea un nombre de usuario</string>
    <string name="eligenombre">Elige un nombre para tu nueva cuenta.</string>
    <string name="eligenombre2">Nombre de usuario</string>
    <string name="puedescambiarla">Puedes cambiarla cuando quieras.</string>
    <string name="puedescambiarlo">Puedes cambiarlo cuando quieras.</string>
    <string name="añadirfotodeperfil">Añade foto de perfil</string>
    <string name="registrarse">REGISTRARSE</string>
    <string name="opcional">Opcional</string>
    <string name="home">Inicio</string>
    <string name="buscador">Buscador</string>
    <string name="perfil">Perfil</string>
    <string name="serie">Series</string>
    <string name="peliculas">Películas</string>
    <string name="misvideos">Publicaciones</string>
    <string name="sugerencias">Sugerencias</string>
    <string name="HorizontalScrollView">HorizontalScrollView</string>
    <string name="subirvideo">Subir publicación</string>
    <string name="cerrar_session">Cerrar Sesión</string>
    <string name="Inicios_de_sesion">Inicios de sesión</string>
    <string name="vacio">"     "</string>
    <string name="informacion">Información</string>
    <string name="menu">"TuFlix"</string>
    <string name="tituloVideo">Titulo</string>
    <string name="descripcion">Descripción</string>
    <string name="valoraciones">Valoraciones y reseñas</string>
    <string name="ver_todo">Ver todo</string>
    <string name="dos">la media</string>
    <string name="decinco">de 5</string>
    <string name="toca">Toca para valorar:</string>
    <string name="reseña">Contenido de la reseña</string>
    <string name="escribir_resenya">Escribir reseña</string>
    <string name="mensaje">Escribe un mensaje</string>
    <string name="receptor">"Receptor "</string>
    <string name="enviar">ENVIAR</string>
    <string name="seguidores">Seguidores</string>
    <string name="siguiendo">Siguiendo</string>
    <string name="videos_subidos">Publicaciones subidas</string>
    <string name="favoritos">Favoritos</string>
    <string name="resenyas">Reseñas</string>
    <string name="editarPerfil">EDITAR PERFIL</string>
    <string name="tus_videos">Publicaciones</string>
    <string name="sus_videos">Publicaciones</string>
    <string name="seguir">SEGUIR</string>
    <string name="bienvenida">¡Te damos la bienvenida a TuFlix!</string>
    <string name="fechainfo">Fecha: 9 de mayo de 2022</string>
    <string name="introduccion">Introducción</string>
    <string name="intro">Gracias por usar la plataforma TuFlix y sus productos, los servicios y las funciones que ponemos a tu disposición como parte de la plataforma (en Conjunto, el "Servivio").</string>
    <string name="nuestroservicio">Nuestro Servicio</string>
    <string name="servicio">El Servicio te ofrece la posibilidad de descubrir, chatear, ver y comprartir vídeos y otros contenidos. Es un lugar en el que los usuarios pueden conectar con otros, informarse y dar su opión al mundo.</string>
    <string name="serviciodos">Además, sirve como plataforma de distribución tanto para creadores de contenido como para sus anunciantes grandes.</string>
    <string name="quienpuede">¿Quién puede usar el Servicio?</string>
    <string name="edadminima">Edad mínima</string>
    <string name="edadminimatext">Puedes usar el Servicio si eres mayor de 15 años; los menores deben contar con la supervisión y el permiso de su padre, madre o tutor.</string>
    <string name="usodelservicio">Tu uso del Servicio</string>
    <string name="usodelservicio2">Contenido en el Servicio</string>
    <string name="usotres">El Contenido en el Servicio incluye vídeos, audios, fotos, texto (comentarios, mensajes, entre otros), funciones interactivas y otros materiales (en conjunto, el "Contenido").</string>
    <string name="usocuatro">El Contenido es responsabilidad de la persona o entidad que lo ha subido al Servicio.</string>
    <string name="tucontenido">Tu Contenido y conducta</string>
    <string name="tucontenido2">Subir Contenido</string>
    <string name="tucontenido3">Si tienes una cuenta en TuFlix, es posible que puedas subir Contenido al Servicio. Puedes usar tu Contenido para promocionar tu empresa o proyecto artístico. Eres responsable del Contenido que subas al Servicio.</string>
    <string name="normas">¿Cuáles son las normas?</string>
    <string name="normas2">La misión de TuFlix es aprovechar al máximo el potencial de la creatividad y de la crítica humana dando la oportunidad de disfrutarlo e inspirarse en el. Creemos que esto solo puede conseguirse si acogemos diferentes formas de expresión artística, ideas, perspectivas y opiniónes. Consecuencia de ello, es posible que el contenido que ofrece nuestra plataforma TuFlix no sea del agrado  de todo el mundo.</string>
    <string name="normas3">Independientemente de si eres crítico o creador de contenido, es importante respertarse los unos a los otros.</string>
    <string name="fecha">Fecha</string>
    <string name="resumen">Resumen</string>
    <string name="informacion2">Es una aplicación creada para realizar reseñas sobre películas y series donde la gente puede compartir su opinión sobre las dichas. Además de crear contenido audiovisual personal, se puede seguir y chatear con usuarios.</string>
    <string name="informacion3">La aplicación ha sido creada y diseñada por Judith Archilla.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="addresenyas">Añadir reseña</string>
    <string name="resenyabt">SUBIR RESEÑA</string>
    <string name="resenya">Reseña</string>
    <string name="actualiza">ACTUALIZAR DATOS</string>
    <string name="cambiarcontra">CAMBIAR CONTRASEÑA</string>
    <string name="modo">Modo claro / oscuro</string>
    <string name="director">Director</string>
    <string name="titulo">Título</string>
    <string name="addvideo">Subir vídeo</string>
    <string name="addVideo">SUBIR</string>
    <string name="chat">Chat</string>
    <string name="actualizar">* Edita los datos y seguidamente presiona el botón de actualizar.</string>

</resources>