<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="24dp"
    tools:context=".InformacionFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="95dp"
            android:layout_height="95dp"
            android:layout_gravity="center"
            android:src="@drawable/informacion" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="5dp"
            android:text="@string/bienvenida"
            android:textAlignment="center"
            android:textColor="@color/azul"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/fechainfo"
            android:textAlignment="textEnd"
            android:textColor="@color/gris"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:cardBackgroundColor="@color/azulclarito2"
                        app:cardCornerRadius="10dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical"
                            android:padding="10dp">

                            <TextView
                                android:id="@+id/textView7"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="7dp"
                                android:text="@string/introduccion"
                                android:textColor="@color/azul"
                                android:textSize="20sp"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/textView9"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/intro"
                                android:textColor="@color/azul"
                                android:textSize="14sp"
                                app:layout_constraintTop_toBottomOf="@id/textView7" />
                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                    <TextView
                        android:id="@+id/textView10"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="7dp"
                        android:text="@string/nuestroservicio"
                        android:textColor="@color/azul"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textView11"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="7dp"
                        android:text="@string/servicio"
                        android:textColor="@color/textoInfo"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/textView15"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:text="@string/serviciodos"
                        android:textColor="@color/textoInfo"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/textView17"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="7dp"
                        android:text="@string/quienpuede"
                        android:textColor="@color/azul"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textView30"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="7dp"
                        android:text="@string/edadminima"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/textView31"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:text="@string/edadminimatext"
                        android:textColor="@color/textoInfo"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/textView32"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="7dp"
                        android:text="@string/usodelservicio"
                        android:textColor="@color/azul"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textView33"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="7dp"
                        android:text="@string/usodelservicio2"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/textView49"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="7dp"
                        android:text="@string/usotres"
                        android:textColor="@color/textoInfo"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/textView39"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:text="@string/usocuatro"
                        android:textColor="@color/textoInfo"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/textView40"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="7dp"
                        android:text="@string/tucontenido"
                        android:textColor="@color/azul"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textView41"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="7dp"
                        android:text="@string/tucontenido2"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/textView42"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:text="@string/tucontenido3"
                        android:textColor="@color/textoInfo"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/textView43"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="7dp"
                        android:text="@string/normas"
                        android:textColor="@color/azul"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textView44"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="7dp"
                        android:text="@string/normas2"
                        android:textColor="@color/textoInfo"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/textView45"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:text="@string/normas3"
                        android:textColor="@color/textoInfo"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/textView46"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="7dp"
                        android:text="@string/resumen"
                        android:textColor="@color/azul"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textView47"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="7dp"
                        android:text="@string/informacion2"
                        android:textColor="@color/textoInfo"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/textView48"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:text="@string/informacion3"
                        android:textColor="@color/textoInfo"
                        android:textSize="12sp" />


                </LinearLayout>
            </ScrollView>
        </LinearLayout>
    </LinearLayout>

</FrameLayout>