<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".IniciarSesionFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="24dp"
            app:srcCompat="@drawable/tuflix" />

        <ProgressBar
            android:id="@+id/signInProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone" />

        <TextView
            android:id="@+id/textViewIniciar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="32dp"
            android:layout_marginRight="24dp"
            android:fontFamily="sans-serif"
            android:text="@string/inicia_sesion"
            android:textColor="@color/azul"
            android:textSize="23dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/correoBox"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:hint="@string/correo" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/textViewContraseña"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="12dp"
            android:layout_marginRight="24dp"
            android:text="@string/escribe_tu_contrasenya"
            android:textColor="@color/azul"
            android:textSize="23dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordBox"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:hint="@string/contrasenya" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnIniciarSessio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="24dp"
            android:backgroundTint="@color/azul"
            android:text="@string/iniciarSessio"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/textBtnRecoveryPasswd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            android:minHeight="48dp"
            android:text="@string/recuperarContrasenya"
            android:textAlignment="center" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="64dp"
                android:layout_height="53dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                app:srcCompat="@drawable/google" />

            <TextView
                android:id="@+id/googleSignIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="35dp"
                android:layout_marginEnd="24dp"
                android:clickable="true"
                android:minHeight="48dp"
                android:text="@string/google"
                android:textColor="@color/azul" />
        </LinearLayout>

        <TextView
            android:id="@+id/registrarse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="65dp"
            android:layout_marginEnd="24dp"
            android:clickable="true"
            android:minHeight="48dp"
            android:text="@string/registro"
            android:textAlignment="center"
            android:textColor="@color/azul" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>