<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/todo"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="15dp"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:cardCornerRadius="100dp">

            <ImageView
                android:id="@+id/foto"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:scaleType="centerCrop" />
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/autor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="7dp"
                android:fontFamily="serif"
                android:text="@string/eligenombre2"
                android:textColor="@color/azul"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/mensaje"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mensaje"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/adjunto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="7dp" />

            <TextView
                android:id="@+id/fecha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="serif"
                android:text="@string/fecha"
                android:textColor="@color/azul"
                android:textSize="13sp" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>